# DecisionTree

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: decision_tree.hpp  decision_tree_classifier.hpp  decision_tree_regressor.hpp
src/: decision_tree_classifier.cpp  decision_tree_regressor.cpp
tests/: testing_by_ai.cpp
